[package]
name = "rust_module"
version = "0.0.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[features]
lua54 = ["mluau/lua54"]
lua53 = ["mluau/lua53"]
lua52 = ["mluau/lua52"]
lua51 = ["mluau/lua51"]
luajit = ["mluau/luajit"]

[dependencies]
mluau = { path = "../..", features = ["module"] }
